@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11637 2005/10/23 23:04:49 rillig Exp $
+$NetBSD: CHANGES,v 1.11638 2005/10/23 23:06:18 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4808,3 +4808,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated x11/xdaemon to 1.0nb1 [rillig 2005-10-23]
 	Updated x11/xdaemon2 to 2.0nb3 [rillig 2005-10-23]
 	Updated x11/xteddy2 to 2.0.1nb7 [rillig 2005-10-23]
+	Updated pkgtools/pkglint to 4.29.1 [rillig 2005-10-23]
